--- a/style.css
+++ b/style.css
@@ -1,4 +1,66 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+html, body{
+	height: 100%;
+	width: 100%;
+	font-family: roboto;
+	color: #222;
+}
+
+
+.navbar{
+	padding: .8rem;
+}
+
+.navbar-brand{
+	padding: 15px;
+}
+
+#navbarNav li{
+	padding-right: 20px;
+}
+
+.nav-link{
+	font-size: 1.1em !important;
+}
+
+.carousel-inner img{
+	width: 100%;
+	height: 100%;
+}
+
+.carousel-caption{
+	position: absolute;
+	top:80%;
+	transform: translateY(-50%);
+}
+
+.carousel-caption h3{
+	font-size: 400%;
+	text-transform: uppercase;
+	color: #ffaa00;
+	text-shadow: 1px 1px 15px #000;
+}
+
+.carousel-caption p{
+	font-size: 200%;
+	color: #ffcc66;
+	font-weight: 500;
+	text-shadow: 1px 1px 15px #000;
+	padding: 1rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
