--- a/style.css
+++ b/style.css
@@ -49,14 +49,18 @@ html, body{
 	padding: 1rem;
 }
 
+.jumbotron {
+	padding: 1rem;
+}
+
+.jumbotron p{
+	font-style: italic;
+}
 
 
-
-
-
-
-
-
+.card-deck{
+	padding: 0 30px 0 30px;
+}
 
 
 
